infrastructure/minio-operator/minio-tenant/minio-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: minio
spec:
  parentRefs:
    - name: traefik-internal
      namespace: networking
  hostnames:
    - "minio.mmontes-internal.duckdns.org"
  rules:
    - backendRefs:
        - name: minio
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: minio-console
spec:
  parentRefs:
    - name: traefik-internal
      namespace: networking
  hostnames:
    - "minio-console.mmontes-internal.duckdns.org"
  rules:
    - backendRefs:
        - name: minio-console
          port: 9090
